src/style.css
@font-face {
  font-family: "Barlow Condensed";
  font-weight: 400;
  src: url(./assets/BarlowCondensed-Regular.ttf);
}

@font-face {
  font-family: "Barlow Condensed";
  font-weight: 700;
  src: url(./assets/BarlowCondensed-Bold.ttf);
}

@font-face {
  font-family: "Bellefair";
  src: url(./assets/Bellefair-Regular.ttf);
}
:root {
  --color-neutral-100: hsl(0, 0%, 100%);
  --color-neutral-400: hsl(231, 77%, 90%);
  --color-neutral-900: hsl(230, 35%, 7%);

  --font-family-serif: "Bellefair", serif;
  --font-family-sans-serif: "Barlow Condensed", system-ui, sans-serif;

  --font-size-xxxl: 9.375rem;
  --font-size-xxl: 6.25rem;
  --font-size-xl: 3.5rem;
  --font-size-l: 2.25rem;
  --font-size-m: 1.75rem;
  --font-size-s: 1.125rem;
  --font-size-xs: 1rem;
  --font-size-xxs: 0.875rem;
}

@media (max-width: 30em) {
  :root {
    --font-size-xxxl: 5rem;
    --font-size-xxl: 3.5rem;
    --font-size-xl: 1.75rem;
    --font-size-l: 1.25rem;
    --font-size-m: 1rem;
    --font-size-s: 1rem;
    --font-size-xs: 1rem;
    --font-size-xxs: 1rem;
  }
}
/*RESET*/

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

/* Remove default margin in favour of better control in authored CSS */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin-block-end: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  line-height: 1.5;
}

/* Set shorter line heights on headings and interactive elements */
h1,
h2,
h3,
h4,
button,
input,
label {
  line-height: 1.1;
}

/* Balance text wrapping on headings */
h1,
h2,
h3,
h4 {
  text-wrap: balance;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
  color: currentColor;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 5ex;
}

/*RESET ENDS*/

.container {
  display: grid;
  grid-template-columns: 3em 6em 1fr 3em;
}

.space-between {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.two-column {
  display: grid;
  grid-column: 3;
  grid-template-rows: 100%;
  margin: 0;
}

h1:has(+ .two-column) {
  grid-column: 3 / -1;
}

@media (min-width: 30em) {
  .two-column {
    grid-template-columns: 1fr 1fr;
  }
}

body {
  background-color: var(--color-neutral-900);
  background-size: cover;
  color: var(--color-neutral-400);
  font-family: var(--font-family-sans-serif);
  font-size: var(--font-size-s);
  font-weight: 400;
  line-height: 2em;
  margin: 0;
  min-height: 100dvh;
}

@media (max-width: 30em) {
  body {
    text-align: center;
  }
}

#root {
  display: grid;
  min-height: 100dvh;
  grid-template-rows: auto 1fr;
}

h1,
h2,
h3 {
  color: var(--color-neutral-100);
  font-weight: 400;
  text-transform: uppercase;
}

h1 > span {
  opacity: 0.5;
}

header {
  padding-block-start: 1em;
}

header .space-between {
  grid-column: 2/-1;
}

.header__nav > ul {
  align-items: center;
  background-color: hsla(0, 0%, 100%, 0.1);
  backdrop-filter: blur(1em) saturate(100%);
  color: var(--color-neutral-100);
  display: flex;
  flex-wrap: wrap;
  font-size: var(--font-size-xs);
  gap: 3em;
  justify-content: start;
  list-style: none;
  padding: 2em 0 2em 8em;
  position: relative;
  text-transform: uppercase;
  width: 58vw;
}

@media (max-width: 30em) {
  .header__nav > ul {
    display: none;
  }
}

.header__nav > ul::before {
  background-color: var(--color-neutral-100);
  content: "";
  height: 0.125em;
  opacity: 0.1;
  width: 55%;
  position: absolute;
  right: 95%;
}

.header__nav a {
  color: inherit;
  text-decoration: none;
  letter-spacing: 2.7px;
}

.header__nav a > span {
  font-weight: 700;
}

main {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  margin: 0;
}

body:has(.home) {
  background-image: url(./assets/home/background-home-desktop.jpg);
}

.home h1 {
  font-family: var(--font-family-serif);
}

.home__content {
  margin: auto;
}

.home__eyebrow {
  font-size: var(--font-size-m);
  letter-spacing: 2.7px;
  text-transform: uppercase;
}

.home__content > h1 {
  font-size: var(--font-size-xxxl);
  font-weight: 400;
  margin-block: 1rem 0;
}

.home__content > h1 + p {
  max-width: 27.5rem;
}

div:has(> .home__button) {
  display: flex;
}

.home__button {
  aspect-ratio: 1;
  background-color: var(--color-neutral-100);
  border-radius: 50%;
  color: var(--color-neutral-900);
  display: grid;
  font-family: var(--font-family-serif);
  font-size: 2rem;
  height: 17.125rem;
  letter-spacing: 0.125rem;
  margin: auto auto 0 auto;
  place-content: center;
  text-decoration: none;
  text-transform: uppercase;
}

body:has(.destination) {
  background-image: url(./assets/destination/background-destination-desktop.jpg);
}

main:not(.home) h1 {
  letter-spacing: 4.75px;
}

.destination {
  justify-content: start;
}

.destination h1 {
  margin-block-start: 2.225rem;
}

.destination .two-column {
  margin-block-start: 3rem;
}

.destination .two-column > img {
  margin: auto;
}

.destination__content {
  margin-inline: auto;
}

.destination__controls {
  display: flex;
  gap: 2rem;
  flex-wrap: wrap;
}

.destination__controls > button {
  background: transparent;
  border: 0;
  color: var(--color-neutral-400);
  cursor: pointer;
  text-transform: uppercase;
  letter-spacing: 2.7px;
  padding-inline: 0;
}

.destination__controls > button.current {
  border-bottom: 3px solid;
  color: white;
}

.destination__name {
  font-family: var(--font-family-serif);
  font-size: var(--font-size-xxl);
  margin-top: 3rem;
}

.destination__desc {
  max-width: 27.5rem;
  min-height: 9rem;
  text-wrap: pretty;
}

.destination hr {
  background-color: var(--color-neutral-100);
  display: block;
  opacity: 0.1;
  max-width: 27.5rem;
  margin: 3rem 0 1rem 0;
}

.destination__content .two-column {
  margin: 0;
}

.destination__label {
  font-size: var(--font-size-xxs);
  letter-spacing: 2.35px;
  text-transform: uppercase;
}

.destination__fact {
  color: var(--color-neutral-100);
  font-family: var(--font-family-serif);
  font-size: var(--font-size-l);
  text-transform: uppercase;
  margin-block-start: 0.5rem;
}

body:has(.crew) {
  background-image: url(./assets/crew/background-crew-desktop.jpg);
}

.crew .two-column {
  grid-template-columns: 60% 40%;
}

.crew h1 {
  margin: 0;
}

.crew__content {
  display: flex;
  flex-direction: column;
  padding-inline-start: 2.5rem;
}

.crew__role {
  color: var(--color-neutral-100);
  font-family: var(--font-family-serif);
  font-size: var(--font-size-l);
  margin-block: auto 0;
  opacity: 0.5;
  text-transform: uppercase;
}

.crew__name {
  font-family: var(--font-family-serif);
  font-size: var(--font-size-xl);
  margin-block: 1rem 0;
}

.crew__bio {
  max-width: 27.5rem;
  min-height: 9.375rem;
  text-wrap: pretty;
}

.crew__buttons {
  display: flex;
  gap: 24px;
  margin-block: auto 5rem;
}

.crew__button {
  aspect-ratio: 1;
  border-radius: 50%;
  border: 0;
  height: 15px;
  opacity: 0.5;
}

.crew__button.current {
  opacity: 1;
}

.crew__img {
  aspect-ratio: 1;
  height: 645px;
  object-fit: contain;
}

body:has(.tech) {
  background-image: url(./assets/technology/background-technology-desktop.jpg);
}

.tech h1 {
  margin: 0;
}

.tech .two-column {
  grid-column: 3 / -1;
}

.tech__sidebar {
  display: grid;
  gap: 4rem;
  grid-template-columns: auto 1fr;
}

.tech__controls {
  align-items: center;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  justify-content: center;
}

.tech__button {
  aspect-ratio: 1;
  background-color: transparent;
  border: 1px solid var(--color-neutral-100);
  border-radius: 50%;
  color: var(--color-neutral-100);
  font-family: var(--font-family-serif);
  font-size: var(--font-size-l);
  height: 5rem;
}

.tech__button.current {
  background-color: var(--color-neutral-100);
  color: var(--color-neutral-900);
}

.tech__content {
  margin-block: auto 10rem;
}

.tech__eyebrow {
  letter-spacing: 2.7px;
  text-transform: uppercase;
}

.tech__name {
  font-family: var(--font-family-serif);
  font-size: var(--font-size-xl);
  margin-block-start: 0;
}

.tech__desc {
  max-width: 37.5rem;
}

.tech__img {
  margin-inline-start: auto;
}

